tests/01-syntax/formatting.ml.FATAL.reference
let () = Bolt.Logger.prepare "Formatting"
  
let () =
  (Bolt.Logger.log "Formatting" Bolt.Level.FATAL ~file: "formatting.ml"
     ~line: 2 ~column: 2 ~properties: [] ~error: None "no parameter";
   ();
   ();
   ();
   ();
   ();
   ())
  
let id x = x
  
let () =
  (Bolt.Logger.log "Formatting" Bolt.Level.FATAL ~file: "formatting.ml"
     ~line: 13 ~column: 2 ~properties: [] ~error: None "no parameter";
   ();
   ();
   ();
   ();
   ();
   ())
  

